--- a/BookWeb/Views/Category/Create.cshtml
+++ b/BookWeb/Views/Category/Create.cshtml
@@ -5,7 +5,9 @@
             <h2 class="text-primary">Create Category</h2>
             <hr/>
         </div>
-        <div asp-validation-summary="All"></div>
+        @* <div asp-validation-summary="ModelOnly"></div> *@
+        @* ModelOnly displays error which is not relative to properties in Model Folder
+        Like Name, DisplayOrder of Class Category *@
         <div class="mb-3 row p-1">
             <label asp-for="Name" class="p-0"></label>
             <input asp-for="Name" class="form-control" />
