--- a/BookWeb/Views/Category/Edit.cshtml
+++ b/BookWeb/Views/Category/Edit.cshtml
@@ -1,5 +1,7 @@
 ﻿@model Category
 <form method="post">
+    @* if the name id is not Id, use code below, if not it will create a new record *@
+    @* <input asp-for="Id" hidden /> *@
     <div class="border p-3 mt-4">
         <div class="row pb-2">
             <h2 class="text-primary">Edit Category</h2>
