--- a/BookWeb/Views/Category/Delete.cshtml
+++ b/BookWeb/Views/Category/Delete.cshtml
@@ -1,29 +1,23 @@
 ﻿@model Category
 <form method="post">
-    @* if the name id is not Id, use code below, if not it will create a new record *@
     <input asp-for="Id" hidden />
     <div class="border p-3 mt-4">
         <div class="row pb-2">
-            <h2 class="text-primary">Edit Category</h2>
+            <h2 class="text-primary">Delete Category</h2>
             <hr />
         </div>
-        @* <div asp-validation-summary="ModelOnly"></div> *@
-        @* ModelOnly displays error which is not relative to properties in Model Folder
-        Like Name, DisplayOrder of Class Category *@
         <div class="mb-3 row p-1">
             <label asp-for="Name" class="p-0"></label>
-            <input asp-for="Name" class="form-control" />
-            <span asp-validation-for="Name" class="text-danger"></span>
+            <input asp-for="Name" disabled class="form-control" />
         </div>
         <div class="mb-3 row p-1">
             <label asp-for="DisplayOrder" class="p-0"></label>
-            <input asp-for="DisplayOrder" class="form-control" />
-            <span asp-validation-for="DisplayOrder" class="text-danger"></span>
+            <input asp-for="DisplayOrder" disabled class="form-control" />
         </div>
         <div class="row">
             <div class="col-6 col-md-3">
                 <!--if the width of screen is smaller than middle the width of button is 6 else it is 3-->
-                <button type="submit" class="btn btn-primary form-control">Edit</button>
+                <button type="submit" class="btn btn-danger form-control">Delete</button>
             </div>
             <div class="col-6 col-md-3">
                 <a asp-controller="Category" asp-action="Index" class="btn btn-outline-secondary form-control">
