--- a/BookWeb/Views/Category/Index.cshtml
+++ b/BookWeb/Views/Category/Index.cshtml
@@ -30,7 +30,7 @@
     </tr>
     </thead>
     <tbody>
-        @foreach(var obj in Model.OrderBy(u=>u.Name))
+        @foreach (var obj in Model) //@foreach(var obj in Model.OrderBy(u=>u.Name))
         {
             <tr>
                 <td>
