Modify UI of Category Pages

--- a/BookWeb/Views/Category/Create.cshtml
+++ b/BookWeb/Views/Category/Create.cshtml
@@ -26,7 +26,7 @@
                     <label asp-for="DisplayOrder" class="ms-2"></label>
                     <span asp-validation-for="DisplayOrder" class="text-danger"></span>
                 </div>
-                <div class="row pt-2">
+                <div class="row mt-3">
                     <div class="col-6 col-md-3">
                         <!--if the width of screen is smaller than middle the width of button is 6 else it is 3-->
                         <button type="submit" class="btn btn-primary form-control">Create</button>
