--- a/BookWeb/Views/Category/Edit.cshtml
+++ b/BookWeb/Views/Category/Edit.cshtml
@@ -1,39 +1,49 @@
 ﻿@model Category
-<form method="post">
-    @* if the name id is not Id, use code below, if not it will create a new record *@
-    <input asp-for="Id" hidden />
-    <div class="border p-3 mt-4">
-        <div class="row pb-2">
-            <h2 class="text-primary">Edit Category</h2>
-            <hr />
-        </div>
-        @* <div asp-validation-summary="ModelOnly"></div> *@
-        @* ModelOnly displays error which is not relative to properties in Model Folder
-        Like Name, DisplayOrder of Class Category *@
-        <div class="mb-3 row p-1">
-            <label asp-for="Name" class="p-0"></label>
-            <input asp-for="Name" class="form-control" />
-            <span asp-validation-for="Name" class="text-danger"></span>
-        </div>
-        <div class="mb-3 row p-1">
-            <label asp-for="DisplayOrder" class="p-0"></label>
-            <input asp-for="DisplayOrder" class="form-control" />
-            <span asp-validation-for="DisplayOrder" class="text-danger"></span>
-        </div>
-        <div class="row">
-            <div class="col-6 col-md-3">
-                <!--if the width of screen is smaller than middle the width of button is 6 else it is 3-->
-                <button type="submit" class="btn btn-primary form-control">Edit</button>
-            </div>
-            <div class="col-6 col-md-3">
-                <a asp-controller="Category" asp-action="Index" class="btn btn-outline-secondary form-control">
-                    Back To List
-                </a>
-            </div>
-        </div>
 
+<div class="card shadow border-0 mt-4">
+    <div class="card-header bg-secondary bg-gradient m-lg-0 py-3">
+        <div class="row">
+            <div class="col-12 text-center">
+                <h2 class="text-white py-2">
+                    Edit Category
+                </h2>
+            </div>
+        </div>
     </div>
-</form>
+    <div class="card-body p-4">
+        <form method="post">
+            @* if the name id is not Id, use code below, if not it will create a new record *@
+            <input asp-for="Id" hidden />
+            <div class="border p-3">
+                @* <div asp-validation-summary="ModelOnly"></div> *@
+                @* ModelOnly displays error which is not relative to properties in Model Folder
+                Like Name, DisplayOrder of Class Category *@
+                <div class="form-floating py-2 col-12">
+                    <input asp-for="Name" class="form-control border-0 shadow" />
+                    <label asp-for="Name" class="ms-2"></label>
+                    <span asp-validation-for="Name" class="text-danger"></span>
+                </div>
+                <div class="form-floating py-2 col-12">
+                    <input asp-for="DisplayOrder" class="form-control border-0 shadow" />
+                    <label asp-for="DisplayOrder" class="ms-2"></label>
+                    <span asp-validation-for="DisplayOrder" class="text-danger"></span>
+                </div>
+                <div class="row mt-3">
+                    <div class="col-6 col-md-3">
+                        <!--if the width of screen is smaller than middle the width of button is 6 else it is 3-->
+                        <button type="submit" class="btn btn-primary form-control">Edit</button>
+                    </div>
+                    <div class="col-6 col-md-3">
+                        <a asp-controller="Category" asp-action="Index" class="btn btn-outline-primary border form-control">
+                            Back To List
+                        </a>
+                    </div>
+                </div>
+
+            </div>
+        </form>
+    </div>
+</div>
 
 @section Scripts{
     @{
