--- a/BookWeb/Areas/Admin/Views/Product/Index.cshtml
+++ b/BookWeb/Areas/Admin/Views/Product/Index.cshtml
@@ -1,11 +1,11 @@
-﻿@model List<Category>
+﻿@model List<Product>
 
 <div class="card shadow border-0 mt-4">
     <div class="card-header bg-secondary bg-gradient m-lg-0 py-3">
         <div class="row">
             <div class="col-12 text-center">
                 <h2 class="text-white py-2">
-                    Category List
+                    Product List
                 </h2>
             </div>
         </div>
@@ -15,20 +15,19 @@
             <div class="col-6">
             </div>
             <div class="col-6 text-end">
-                <a asp-controller="Category" asp-action="Create" class="btn btn-primary">
-                    <i class="bi bi-plus-circle"></i> Create New Category
+                <a asp-controller="Product" asp-action="Create" class="btn btn-primary">
+                    <i class="bi bi-plus-circle"></i> Create New Product
                 </a>
             </div>
         </div>
         <table class="table table-bordered table-striped">
             <thead>
                 <tr>
-                    <th>
-                        Product Name
-                    </th>
-                    <th>
-                        Display Order
-                    </th>
+                    <th>Title</th>
+                    <th>ISBN</th>
+                    <th>Price</th>
+                    <th>Author</th>
+                    <th>Category</th>
                     <th></th>
                 </tr>
             </thead>
@@ -37,17 +36,26 @@
                 {
                     <tr>
                         <td>
-                            @obj.Name
+                            @obj.Title
                         </td>
                         <td>
-                            @obj.DisplayOrder
+                            @obj.ISBN
+                        </td>
+                        <td>
+                            @obj.Price
+                        </td>
+                        <td>
+                            @obj.Author
+                        </td>
+                        <td>
+                         
                         </td>
                         <td>
                             <div class="w-75 btn-group" role="group">
-                                <a asp-controller="Category" asp-action="Edit" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
+                                <a asp-controller="Product" asp-action="Edit" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
                                     <i class="bi bi-pencil-square"></i> Edit
                                 </a>
-                                <a asp-controller="Category" asp-action="Delete" asp-route-id="@obj.Id" class="btn btn-danger mx-2">
+                                <a asp-controller="Product" asp-action="Delete" asp-route-id="@obj.Id" class="btn btn-danger mx-2">
                                     <i class="bi bi-trash-fill"></i> Delete
                                 </a>
                             </div>
