--- a/BookWeb/Areas/Admin/Views/Product/Create.cshtml
+++ b/BookWeb/Areas/Admin/Views/Product/Create.cshtml
@@ -56,6 +56,13 @@
                     <label asp-for="Price100" class="ms-2"></label>
                     <span asp-validation-for="Price100" class="text-danger"></span>
                 </div>
+                <div class="form-floating py-2 col-12">
+                    <select asp-for="CategoryId" asp-items="ViewBag.CategoryList" class="form-select border-0 shadow">
+                        <option disabled selected>--Select Category--</option>
+                    </select>
+                    <label asp-for="CategoryId" class="ms-2"></label>
+                    <span asp-validation-for="CategoryId" class="text-danger"></span>
+                </div>
                 <div class="row mt-3">
                     <div class="col-6 col-md-3">
                         <!--if the width of screen is smaller than middle the width of button is 6 else it is 3-->
