--- a/BookWeb/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/BookWeb/Areas/Admin/Views/Product/Upsert.cshtml
@@ -5,13 +5,14 @@
         <div class="row">
             <div class="col-12 text-center">
                 <h2 class="text-white py-2">
-                    Create Product
+                    @(Model.Product.Id != 0?"Update":"Create") Product
                 </h2>
             </div>
         </div>
     </div>
     <div class="card-body p-4">
         <form method="post" class="row" enctype="multipart/form-data">@* enctype used for ImageUrl *@
+            <input asp-for="Product.Id" hidden />
             <div class="border p-3">
                 @* <div asp-validation-summary="ModelOnly"></div> *@
                 @* ModelOnly displays error which is not relative to properties in Model Folder
@@ -72,7 +73,14 @@
                 <div class="row mt-3">
                     <div class="col-6 col-md-3">
                         <!--if the width of screen is smaller than middle the width of button is 6 else it is 3-->
-                        <button type="submit" class="btn btn-primary form-control">Create</button>
+                        @if(Model.Product.Id != 0)
+                        {
+                            <button type="submit" class="btn btn-primary form-control">Update</button>
+                        }
+                        else{
+                            <button type="submit" class="btn btn-primary form-control">Create</button>
+                        }
+                        
                     </div>
                     <div class="col-6 col-md-3">
                         <a asp-controller="Product" asp-action="Index" class="btn btn-outline-primary border form-control">
