--- a/BookWeb/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/BookWeb/Areas/Admin/Views/Product/Upsert.cshtml
@@ -59,14 +59,14 @@
                 <div class="form-floating py-2 col-12">
                     @* <select asp-for="CategoryId" asp-items="ViewBag.CategoryList" class="form-select border-0 shadow"> *@
                     @* <select asp-for="Product.CategoryId" asp-items="@(ViewData["CategoryList"] as IEnumerable<SelectListItem>)" class="form-select border-0 shadow"> *@
-                    <select asp-for="Product.CategoryId" asp-items="@Model.CategoryList" class="form-select border-0 shadow">
+                    <select asp-for="@Model.Product.CategoryId" asp-items="@Model.CategoryList" class="form-select border-0 shadow">
                         <option disabled selected>--Select Category--</option>
                     </select>
                     <label asp-for="Product.CategoryId" class="ms-2"></label>
-                    <span asp-validation-for="Product.CategoryId" class="text-danger"></span>
+                    <span asp-validation-for="Product.Category.Id" class="text-danger"></span>
                 </div>
                 <div class="form-floating py-2 col-12">
-                    <input type="file" class="form-control border-0 shadow" />
+                    <input type="file" name="file" class="form-control border-0 shadow" />
                     <label asp-for="Product.ImageUrl" class="ms-2"></label>
                 </div>
                 <div class="row mt-3">
