--- a/BookWeb/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/BookWeb/Areas/Admin/Views/Product/Upsert.cshtml
@@ -13,6 +13,7 @@
     <div class="card-body p-4">
         <form method="post" class="row" enctype="multipart/form-data">@* enctype used for ImageUrl *@
             <input asp-for="Product.Id" hidden />
+            <input asp-for="Product.ImageUrl" hidden />
             <div class="row">
                 <div class="col-10">
                     <div class="border p-3">
@@ -27,6 +28,7 @@
                         <div class="py-2 col-12">
                             <label asp-for="Product.Description" class="ms-2 text-muted"></label>
                             <textarea asp-for="Product.Description" class="form-control border-0 shadow"></textarea>
+                            <span asp-validation-for="Product.Description" class="text-danger"></span>
                         </div>
                         <div class="form-floating py-2 col-12">
                             <input asp-for="Product.ISBN" class="form-control border-0 shadow" />
