Delete Product and SweetAlerts

--- a/BookWeb/Views/Shared/_Layout.cshtml
+++ b/BookWeb/Views/Shared/_Layout.cshtml
@@ -53,7 +53,6 @@
             @RenderBody()
         </main>
     </div>
-
     <footer class="border-top footer bg-primary">
         <div class="text-center">
             Made with <i class="bi bi-heart-fill"></i> by DotNetMastery
@@ -64,6 +63,7 @@
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="//cdn.datatables.net/1.13.7/js/jquery.dataTables.min.js" asp-append-version="true"></script>
     <script src="https://cdn.tiny.cloud/1/jtzal0pmkjgtctzet31pam6f37wwhqs89jsp0xx1ty35q9fz/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
