--- a/BookWeb/Areas/Admin/Views/Product/Index.cshtml
+++ b/BookWeb/Areas/Admin/Views/Product/Index.cshtml
@@ -1,14 +1,14 @@
 ﻿@model List<Product>
 
-<div class="card shadow border-0 my-4">
-    <div class="card-header bg-secondary bg-gradient ml-0 py-3">
+<div class="card shadow border-0">
+    <div class="card-header bg-secondary bg-gradient ml-0">
         <div class="row">
             <div class="col-12 text-center">
                 <h2 class="text-white py-2">Product List</h2>
             </div>
         </div>
     </div>
-    <div class="card-body p-4">
+    <div class="card-body">
         <div class="row pb-3">
             <div class="col-6">
             </div>
