--- a/BookWeb/Areas/Customer/Views/Home/Details.cshtml
+++ b/BookWeb/Areas/Customer/Views/Home/Details.cshtml
@@ -25,7 +25,7 @@
                     </div>
                     <div class="col-12 col-lg-6 offset-lg-1">
 
-                        <div class="col-12 col-md-6 pb-4">
+                        <div class="col-12 col-md-6 pb-3">
                             <span class="badge">@Model.Category.Name</span>
                         </div>
                         <div class="row ps-2">
@@ -83,10 +83,10 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="row">
-                            <div class="col-12 col-md-6 pb-1">
+                        <div class="row mb-4">
+                            <div class="col-12 col-lg-6 pb-1">
                                 <button type="submit" disabled
-                                        class="btn btn-primary bg-gradient  w-100 py-2 text-uppercase fw-semibold">
+                                        class="btn btn-primary bg-gradient w-100 py-2 text-uppercase fw-semibold">
                                     Add to Cart (Comming Soon...)
                                 </button>
                             </div>
