--- a/BookWeb/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/BookWeb/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,4 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using BookWeb.Areas.Identity
 @using BookWeb.Areas.Identity.Pages
+@using Book.Models
+@using Book.Models.ViewModels
+@using Book.Utility
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
