Update Login and Register UI

--- a/BookWeb/Areas/Customer/Views/Home/Details.cshtml
+++ b/BookWeb/Areas/Customer/Views/Home/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Product
 
 <form method="post">
-    <div class="card shadow border-0 mt-3">
+    <div class="card shadow border-0">
         <div class="card-header bg-secondary bg-gradient text-light">
             <div class="row">
                 <div class="col-12 text-center">
