--- a/BookWeb/Areas/Admin/Views/Category/Index.cshtml
+++ b/BookWeb/Areas/Admin/Views/Category/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<Category>
 
-<div class="card shadow border-0 mt-3">
+<div class="card shadow border-0 mb-5">
     <div class="card-header bg-secondary bg-gradient m-lg-0 ">
         <div class="row">
             <div class="col-12 text-center">
@@ -10,7 +10,7 @@
             </div>
         </div>
     </div>
-    <div class="card-body p-4">
+    <div class="card-body ">
         <div class="row pb-3">
             <div class="col-6">
             </div>
