--- a/BookWeb/Areas/Admin/Views/Product/Index.cshtml
+++ b/BookWeb/Areas/Admin/Views/Product/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<Product>
 
-<div class="card shadow border-0">
+<div class="card shadow border-0 mb-5">
     <div class="card-header bg-secondary bg-gradient ml-0">
         <div class="row">
             <div class="col-12 text-center">
