--- a/BookWeb/Views/Shared/_Layout.cshtml
+++ b/BookWeb/Views/Shared/_Layout.cshtml
@@ -51,7 +51,7 @@
             </div>
         </nav>
     </header>
-    <div class="container">
+    <div class="container mb-3">
         <main role="main" class="pb-3">
             <partial name="_Notification" />
             @RenderBody()
