--- a/BookWeb/Areas/Customer/Views/Home/Details.cshtml
+++ b/BookWeb/Areas/Customer/Views/Home/Details.cshtml
@@ -1,6 +1,7 @@
 ﻿@model ShoppingCart
 
 <form method="post">
+    <input hidden asp-for="ProductId" />
     <div class="card shadow border-0">
         <div class="card-header bg-secondary bg-gradient text-light">
             <div class="row">
