--- a/BookWeb/Areas/Customer/Views/Cart/Index.cshtml
+++ b/BookWeb/Areas/Customer/Views/Cart/Index.cshtml
@@ -17,26 +17,25 @@
             </div>
             <div class="row mb-3 pb-3">
                 <div class="col-md-2 offset-md-1">
-                    <a href="#" class="btn btn-outline-primary text-uppercase mb-5 btn-sm"><small>Continue Shopping</small></a>
+                    <a asp-area="Customer" asp-controller="Home" asp-action="Index" class="btn btn-outline-primary text-uppercase mb-5 btn-sm"><small>Continue Shopping</small></a>
                 </div>
-@*                 @foreach(var cart in Model)
-                { *@
-                    <div class="col-md-10 offset-md-1">
 
-
+                <div class="col-md-10 offset-md-1">
+                    @foreach (var item in Model.ShoppingCartList)
+                    {
                         <div class="row border-bottom pb-3">
                             <div class="d-none d-lg-block col-lg-1 text-center py-2">
-                                <img src="ImageUrl" class="rounded" width="100%" />
+                                <img src="@item.Product.ImageUrl" class="rounded" width="100%" />
                             </div>
                             <div class="col-12 col-lg-6 pt-md-3">
-                                <h5 class="text-uppercase text-secondary"><strong>Title</strong></h5>
-                                @* <p><small>@cart.Product.Description</small></p> *@
+                                <h5 class="text-uppercase text-secondary"><strong>@item.Product.Title</strong></h5>
+                                <p><small>@Html.Raw(item.Product.Description)</small></p>
                             </div>
                             <div class="col-12  col-lg-5 text-center row">
                                 <div class="col-3 text-md-right pt-2 pt-md-4">
                                     <h6 class="fw-semibold">
-                                        Price
-                                        <span class="text-muted">&nbsp;x&nbsp;</span>Count
+                                        @item.Price.ToString("c")
+                                        <span class="text-muted">&nbsp;x&nbsp;</span> @item.Count
                                     </h6>
                                 </div>
                                 <div class="col-6 col-sm-4 col-lg-6 pt-2">
@@ -59,10 +58,8 @@
 
                         </div>
 
-
-
-                    </div>
-       @*          } *@
+                    }
+                </div>
 
             </div>
             <div class="card-footer bg-white border-0">
@@ -70,8 +67,8 @@
                     <div class="col-md-4 offset-md-4">
                         <ul class="list-group mb-4">
                             <li class="d-flex justify-content-between align-items-center">
-                                <h5 class="text-dark fw-semibold text-uppercase"> Total (USD)</h5>
-                                <h4 class="text-dark fw-bolder">$$</h4>
+                                <h5 class="text-dark fw-semibold text-uppercase"> Total (USD) </h5>
+                                <h4 class="text-dark fw-bolder">@Model.OrderTotal.ToString("c")</h4>
                             </li>
                         </ul>
                     </div>
