Demo - Filters in Order List

--- a/BookWeb/Areas/Admin/Views/Order/Index.cshtml
+++ b/BookWeb/Areas/Admin/Views/Order/Index.cshtml
@@ -63,6 +63,7 @@
                     <th>Name</th>
                     <th>Phone Number</th>
                     <th>Email</th>
+                    <th>Status</th>
                     <th>Total</th>
                     <th></th>
                 </tr>
