--- a/BookWeb/Areas/Admin/Views/Order/Details.cshtml
+++ b/BookWeb/Areas/Admin/Views/Order/Details.cshtml
@@ -1,6 +1,9 @@
 ﻿@model OrderVM
 
 <form method="post" class="mb-5">
+
+    <input asp-for="OrderHeader.Id" hidden />
+
     <br />
     <div class="container">
         <div class="card">
@@ -190,7 +193,7 @@
                             </div>
                             @if (User.IsInRole(SD.Role_Admin) || User.IsInRole(SD.Role_Employee))
                             {
-                                <input type="submit" class="btn btn-warning form-control my-1" value="Update Order Details" />
+                                <input type="submit" asp-action="UpdateOrderDetail" class="btn btn-warning form-control my-1" value="Update Order Details" />
                             }
                         </div>
                         <div class="col-12 col-lg-5 offset-lg-1">
