--- a/BookWeb/Areas/Admin/Views/Order/Details.cshtml
+++ b/BookWeb/Areas/Admin/Views/Order/Details.cshtml
@@ -232,7 +232,7 @@
                             </ul>
                             @if (Model.OrderHeader.PaymentStatus == SD.PaymentStatusDelayedPayment && Model.OrderHeader.OrderStatus == SD.StatusShipped)
                             {
-                                <button type="submit" class="btn btn-success form-control my-1">Pay Now</button>
+                                <button type="submit" asp-action="Details" class="btn btn-success form-control my-1">Pay Now</button>
                             }
                             @if (User.IsInRole(SD.Role_Admin) || User.IsInRole(SD.Role_Employee))
                             {
