--- a/BookWeb/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/BookWeb/Areas/Admin/Views/Product/Upsert.cshtml
@@ -13,7 +13,6 @@
     <div class="card-body p-4">
         <form method="post" class="row" enctype="multipart/form-data">@* enctype used for ImageUrl *@
             <input asp-for="Product.Id" hidden />
-            <input asp-for="Product.ImageUrl" hidden />
             <div class="row">
                 <div class="col-10">
                     <div class="border p-3">
@@ -70,8 +69,8 @@
                             <span asp-validation-for="Product.Category.Id" class="text-danger"></span>
                         </div>
                         <div class="form-floating py-2 col-12">
-                            <input type="file" name="file" class="form-control border-0 shadow" />
-                            <label asp-for="Product.ImageUrl" class="ms-2"></label>
+                            <input type="file" name="files" class="form-control border-0 shadow" multiple/>
+                            <label asp-for="Product.ProductImages" class="ms-2"></label>
                         </div>
                         <div class="row mt-3">
                             <div class="col-6 col-md-3">
@@ -96,8 +95,16 @@
                     </div>
                 </div>
                 <div class="col-2">
-                    <img src="@Model.Product.ImageUrl" width="100%" 
-                    style="border-radius:5px; bordor:1px solid #bbb9b9"/>
+                    @if(Model.Product.ProductImages != null)
+                    {
+                        foreach(var image in Model.Product.ProductImages)
+                        {
+                            <div class="border p-1 m-2 text-center">
+                                <img src="@image.ImageUrl" width="100%"
+                                     style="border-radius:5px; bordor:1px solid #bbb9b9" />
+                            </div>
+                        }
+                    }                    
                 </div>
             </div>
 
