--- a/BookWeb/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/BookWeb/Areas/Admin/Views/Product/Upsert.cshtml
@@ -102,6 +102,8 @@
                             <div class="border p-1 m-2 text-center">
                                 <img src="@image.ImageUrl" width="100%"
                                      style="border-radius:5px; bordor:1px solid #bbb9b9" />
+                                <a asp-action="DeleteImage" class="btn btn-danger" asp-route-imageId="@image.Id">
+                                    <i class="bi bi-trash-fill"></i>Delete</a>
                             </div>
                         }
                     }                    
